fix(ui): Fix animation jump on ios

--- a/src/ui/pages/NotificationDetails/components/ReceiveCredential/ReceiveCredential.scss
+++ b/src/ui/pages/NotificationDetails/components/ReceiveCredential/ReceiveCredential.scss
@@ -323,15 +323,12 @@
   @keyframes checkMarkAnimation {
     0% {
       transform: scale(0);
-      opacity: 0;
     }
     70% {
       transform: scale(0) rotate(360deg);
-      opacity: 1;
     }
     95% {
       transform: scale(1) rotate(0);
-      opacity: 1;
     }
     100% {
       transform: translateY(-10%);
